src/objects/Bitcoin_Price__c.object
<CustomObject>
    <fields>
        <fullName>Close__c</fullName>
        <label>Close</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High__c</fullName>
        <label>High</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low__c</fullName>
        <label>Low</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <label>Open</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <externalId>true</externalId>
        <label>Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_BTC__c</fullName>
        <label>Volume BTC</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Currency__c</fullName>
        <label>Volume Currency</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Price__c</fullName>
        <label>Weighted Price</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>Bitcoin Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Time__c</columns>
        <columns>Open__c</columns>
        <columns>Low__c</columns>
        <columns>High__c</columns>
        <columns>Close__c</columns>
        <columns>Volume_BTC__c</columns>
        <columns>Volume_Currency__c</columns>
        <columns>Weighted_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BTC-{0000000}</displayFormat>
        <label>Bitcoin Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bitcoin Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>